--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Primary Meta Tags -->
-    <title>TRUMP THE HEDGEDOG</title>
+    <title>TRUMP HEDGED ON JAIL /title>
 
 
     <link rel="stylesheet" href="ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
@@ -440,10 +440,10 @@
                         </li>
 
                     </ul>
-                    <a target="_new" href="https://t.me/WonkPortal" class=" telegram-join " style="    margin-right: 1rem;" data-splitting>
+                    <a target="_new" href="https://t.me/Trumphedgeonjail" class=" telegram-join " style="    margin-right: 1rem;" data-splitting>
                         <i class="fa-brands fa-telegram"></i> Telegram
                     </a>
-                    <a href="https://twitter.com/WonkonSOL" target="_new" style="    margin-right: 1rem;" class="" data-splitting>
+                    <a href="https://x.com/trumphdgonjail" target="_new" style="    margin-right: 1rem;" class="" data-splitting>
                         <i class="fa-brands fa-twitter"></i> Twitter
                     </a>
 
@@ -476,10 +476,10 @@
                         <a href="#" target="_new" class="buy-button contract_btn ">
                             Buy Here
                         </a>
-                        <a href="https://t.me/TrumpHedgeSol" target="_new" class="telegram-button telegram-join">
+                        <a href="https://t.me/Trumphedgeonjail" target="_new" class="telegram-button telegram-join">
                             Telegram
                         </a>
-                        <a href="https://twitter.com/TrumpHedgeSol_" target="_new" class="chart-button play-chart">
+                        <a href="https://x.com/trumphdgonjail" target="_new" class="chart-button play-chart">
                             Twitter
                         </a>
                         <a href="#" target="_new" class="buy-button contract_btn ">
@@ -677,7 +677,7 @@
                     <div class="col-md-8 mx-auto col-12">
                         <div class="about-text-wrap text-center">
                             <img src="join.jpg" class="about-image img-fluid">
-                            <a href="https://t.me/TrumpHedgeSol" target="_new" class="  mt-5 mx-auto  chart-button  smoothscroll ">
+                            <a href="https://t.me/Trumphedgeonjail" target="_new" class="  mt-5 mx-auto  chart-button  smoothscroll ">
                                 <h4 style="color:#283593; " class="">Join our Community</h4>
                             </a>
                             <img src="logo.png" alt="" style="width: 100px;margin:0 auto;display: block; margin-top: 0.5rem;">
@@ -713,12 +713,12 @@
                                     <i class="fa-solid fa-right-left"></i>   Raydium</a>
                             </li>
                             <li class="site-footer-link-item">
-                                <a href="https://t.me/TrumpHedgeSol" target="_new" class="site-footer-link telegram-join">
+                                <a href="https://t.me/Trumphedgeonjail" target="_new" class="site-footer-link telegram-join">
                                     <i class="fa-brands fa-telegram"></i> Telegram</a>
                             </li>
 
                             <li class="site-footer-link-item">
-                                <a href="https://twitter.com/TrumpHedgeSol_" target="_new" class="site-footer-link"> <i
+                                <a href="https://x.com/trumphdgonjail" target="_new" class="site-footer-link"> <i
                                         class="fa-brands fa-twitter"></i> Twitter</a>
                             </li>
 
