--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Primary Meta Tags -->
-    <title>TRUMP HEDGED ON JAIL /title>
+    <title>TRUMP HEDGED ON JAIL</title>
 
 
     <link rel="stylesheet" href="ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
