--- a/index.html
+++ b/index.html
@@ -601,12 +601,12 @@
                                 </div>
                                 <div>
                                     <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">Supply</small></h3>
-                                    <p> 111,000.000 <span style="color:#bb7b01" data-splitting> $TRUMG
+                                    <p> 1 BILLION <span style="color:#bb7b01" data-splitting> $TRUMG
                                     </span>
                                     </p>
                                     <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">Liquidity</small></h3>
 
-                                    <p>99,900.000 <span style="color:#bb7b01" data-splitting> $TRUMG
+                                    <p>100% <span style="color:#bb7b01" data-splitting> $TRUMG
                                     </span> (90%)</p>
                                     <h3 class="">
                                         <small class="renounsecOwner">
